# wasInWien

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: update-events.yml
collectors/: base.py  instagram.py  reddit.py  telegram.py  web_html.py  web_rss.py
config/: schema.md
config/cities/: vienna.json
data/: cities.json  vienna_events.json
web/: index.html
