[project]
name = "was-in-wien"
version = "0.1.0"
description = "Leichtgewichtiger Event-Aggregator: sammelt Events aus mehreren Quellen ohne Login/Account, kein Server, keine Datenbank."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.8",
    "feedparser>=6.0",
]

[tool.uv]
package = false
